// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Byline default snapshot test 1`] = `
<div
  className="byline"
>
  <Figure
    alignment="left"
    alt="picture of Puppet Sloth"
    className="margin-bottom-none"
    image={Object {}}
    imageClassName="avatar"
    size="small"
  >
    <strong>
      Puppet Sloth
    </strong>
    <br />
    <p
      className="footnote"
    >
      DoSomething.org Staff
    </p>
  </Figure>
</div>
`;

exports[`Byline with props snapshot test 1`] = `
<div
  className="byline"
>
  <Figure
    alignment="left"
    alt="picture of Braümhilda Snosages"
    className="margin-bottom-none"
    image="http://placeimg.com/150/150/people"
    imageClassName="avatar"
    size="small"
  >
    <strong>
      Braümhilda Snosages
    </strong>
    <br />
    <p
      className="footnote"
    >
      Campaign Tester
    </p>
  </Figure>
</div>
`;
